--- a/style-dash.css
+++ b/style-dash.css
@@ -4,6 +4,46 @@
   box-sizing: border-box;
 }
 
+ /* Preloader */
+ #preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #fff;
+  z-index: 99;
+}
+
+#status {
+  width: 350px;
+  height: 500px;
+  position: absolute;
+  left: 37%;
+  top:20%;
+  background-image: url('https://miro.medium.com/max/1400/1*CsJ05WEGfunYMLGfsT2sXA.gif');
+  background-repeat: no-repeat;
+  background-position: center;
+  margin: -100px 0 0 -100px;
+}
+
+@media (min-width:1025px) {  
+    
+    #status {
+  width: 350px;
+  height: 500px;
+  position: absolute;
+  left: 45%;
+  top:25%; }}
+@media (min-width:1281px) { 
+    
+    #status {
+  width: 350px;
+  height: 500px;
+  position: absolute;
+  left: 45%;
+  top:25%; } }
+
 :root {
   --app-container: #f3f6fd;
   --main-color: #1f1c2e;
@@ -681,7 +721,10 @@ button, a {
   padding: 6px 16px;
   font-weight: 700;
 }
+.days-left a{
+ 
 
+}
 .mode-switch.active .moon {
   fill: var(--main-color);
 }
@@ -849,7 +892,9 @@ button, a {
   padding: 40px;
   margin: 15px;
   border-radius: 10px;
-  background: #fff;
+  background: rgb(109, 65, 48);
+  background: linear-gradient(0deg, rgb(121, 70, 40) 0%, rgba(255, 255, 255, 0.776) 100%);
+  /* background: #fff; */
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.1);
   transition: all 0.4s linear;
 }
@@ -890,7 +935,11 @@ section p {
   line-height: 1.5;
   margin-bottom: 25px;
 }
+.wrapper button{
+  width: 50%;
+}
 .plus{
+  right: 0  ;
   display: flex;
   justify-content: center;
   background: #00adee;
@@ -907,21 +956,7 @@ section p {
 section button:hover {
   background: #006388;
 }
-.email-capture {
-  display: flex;
-}
-.email-capture button {
-  padding: 0px 20px;
-}
-.email-capture input {
-  flex: 1;
-  padding: 0 0 0 20px;
-  margin: 0;
-  border: none;
-  height: 40px;
-  background: #eee;
-  border-radius: 2px;
-}
+
 @keyframes slideIn {
   from {
     transform: translateY(400px);
@@ -973,4 +1008,17 @@ section h1, h2 {
 }
 section p, .email-capture, .close {
   animation: slideInShort 0.25s 1.1s cubic-bezier(0.03, 0.16, 0.39, 0.99) both, fadeIn 0.1s 1.05s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .container button{
+    width: 100%;
+  }
+  .messages-section{
+    display: none;
+  }
+  .numscroller{
+    font-size: 20px;
+  }
 }
